syntax = "proto3";

option go_package = "auth/pkg/auth_v1";

// import "google/protobuf/struct.proto";

service Auth {
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc Register(RegistrationRequest) returns (RegistrationResponse) {}
    rpc CheckToken(CheckTokenRequest) returns (EmptyResponse) {}
}

message LoginRequest {
    string username = 1 [ json_name = "username" ];
    string password = 2 [ json_name = "password" ];
}

message RegistrationRequest {
    string username = 1 [ json_name = "username" ];
    string email = 2 [ json_name = "email" ];
    string password = 3 [ json_name = "password" ];
}

message LoginResponse {
    string token = 1 [ json_name = "token"];
}

message RegistrationResponse {
    string token = 1 [ json_name = "token"];
}

message CheckTokenRequest {
    string token = 1 [ json_name = "token"];
}

message EmptyResponse {
}



// message NullableString {
//     oneof kind {
//       google.protobuf.NullValue null = 1;
//       string data = 2;
//     }
// }